@@ -6,6 +6,11 @@ Changes in 0.50.12:
     purpose of the recipe loading.  loadInstalled will examine the local
     system to look for a matching installed trove, and load that version, 
     while loadSuperClass will not.
+  * logs of builds are now stored in cooked changesets in the :debuginfo 
+    component -- generally in 
+    /usr/src/debug/buildlogs/<name>-<version>-log.bz2, controlled by 
+    macros.buildlogpath
+  * add lib/logger.py
 
 Changes in 0.50.11:
   * Reworked file addition to local database a bit for better performance
